# DisasterCaseManagementSystem

./: .env  .gitmodules  LICENSE  README.md  docker-compose.yaml
.github/workflows/: cache_actions.yml  eslint.yml  python_actions.yml  react-app_actions.yml
db/: Dockerfile
python/: .gitignore  Dockerfile  dataBase.db  db_setup.py  main.py  model.py  pyproject.toml  test.py
python/LegacyFiles/: model.py
python/LegacyFiles/src/model/: db_setup.py  defaultList.py  serveLog.py  setting.py  stockList.py  waitingQueue.py
python/LegacyFiles/src/test/test_RW/: conftest.py  test_defaultList.py
python/api/: db.py  main.py  migrate_db.py  test.db
python/api/cruds/: default_list.py  person.py  qr_read.py  receive_log.py  stock_io.py  stock_list.py
python/api/models/: default_list.py  person.py  qr_read.py  receive_log.py  stock_io.py  stock_list.py
python/api/routers/: default_list.py  person.py  qr_read.py  receive_log.py  stock_io.py  stock_list.py
python/api/schemas/: default_list.py  person.py  qr_read.py  receive_log.py  stock_io.py  stock_list.py
python/api/test/: conftest.py
python/api/test/test_RW/: test_defaultList.py
python/crt/: issue_crt.sh
python/src/: main.py
python/src/model/: person.py  stockIO.py
python/src/test/: conftest.py
python/test/: conftest.py  test_defaultList.py  test_main.py  test_person.py  test_waitingQueue.py
python/test/test_RW/: conftest.py  test_person.py  test_waitingQueue.py
react-app/: .env  .eslintrc.json  Dockerfile  package-lock.json  package.json
react-app/src/: App.css  App.tsx
(+45 files in other folders)
