[tool.poetry]
name = "dcms-api"
version = "0.1.0"
description = ""
authors = ["MIZOGUCHI Koki <94270819+MIZOGUCHIKoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
basemodel = "^20190604.1625"
pytest = "^8.3.3"
sqlalchemy = "^2.0.36"
asyncio = "^3.4.3"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
